# esp32-s3-on-idf6

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .ignore  AGENTS.md  CMakeLists.txt  CODING_STYLE.md  Cargo.toml  PROJECT.md  README.md  TESTING.md  baseline.json  build.rs  opencode.json  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.opencode/agents/: bugfix.md  debugger.md  feature.md  foreman.md  implementer.md  orchestrator.md  planner.md  reporter.md  reviewer.md  validator.md  verifier.md
.semgrep/: blocking.yml  main_loop_blocking.yaml
components/application/: CMakeLists.txt
components/application/include/application/: command.hpp  command_dispatch.hpp  dispatch.hpp  scheduler.hpp  send_motor_command.hpp  state_machine.hpp
components/application/include/application/handlers/: burette_cal.hpp  burette_ops.hpp  sensors.hpp  serial.hpp  system.hpp  valve.hpp
components/application/src/: command.cpp  command_dispatch.cpp  dispatch.cpp  scheduler.cpp  send_motor_command.cpp  state_machine.cpp
components/application/src/handlers/: burette_cal.cpp  burette_ops.cpp  sensors.cpp  serial.cpp  system.cpp  valve.cpp
components/diag/: CMakeLists.txt
components/diag/include/diag/: black_box.hpp  ffi_guard.hpp  heap_snapshot.hpp  rtc_watchdog.hpp  stack_monitor.hpp  state_tracer.hpp  tick_watchdog.hpp
components/diag/src/: black_box.cpp  crash_handler.cpp  ffi_guard.cpp  heap_snapshot.cpp  rtc_watchdog.cpp  stack_monitor.cpp  state_tracer.cpp
components/domain/: CMakeLists.txt
components/infrastructure/: CMakeLists.txt
components/infrastructure/include/infrastructure/: config.hpp  esp_check.hpp  motor_task.hpp  temp_thread.hpp
components/infrastructure/include/infrastructure/drivers/: adc.hpp  limitswitch.hpp  rgb_led.hpp  stepper.hpp  tmc_uart.hpp  valve.hpp
components/infrastructure/include/infrastructure/storage/: nvs.hpp
components/infrastructure/network/include/infrastructure/network/: ble.hpp  ble_notify_thread.hpp  http_server.hpp  wifi.hpp
components/infrastructure/network/src/: ble.cpp  ble_notify_thread.cpp  http_server.cpp  wifi.cpp
components/infrastructure/src/: motor_task.cpp  temp_thread.cpp
components/infrastructure/src/drivers/: limitswitch.cpp  onewire.cpp  rgb_led.cpp  stepper.cpp  tmc_uart.cpp  valve.cpp
components/infrastructure/src/motor/: homing.cpp  internal.hpp  motion.cpp  sm_runners.cpp  task.cpp
components/infrastructure/src/storage/: nvs.cpp
components/interface/: CMakeLists.txt
components/interface/include/interface/: broadcast.hpp  serial.hpp  webui.hpp
components/interface/src/: broadcast.cpp  rest_api.cpp  serial.cpp
docs/: 26_06_27_rust_esp_idf_v6_feasibility_study.md  docs_templates.md  lessons_learned.yaml  log.md  validate_okf.py
docs/API/: COMMS_PROTOCOL.md
docs/crash_reports/: 2026-07-02_rmt_encode_state_panic.md  2026-07-04_ble_host_task_null_deref.md  2026-07-04_boot_invalid_mbox.md  2026-07-04_http_dropped_motor_oom.md  2026-07-04_phase6_postmortem.md  2026-07-04_uart_stack_overflow.md  2026-07-04_uart_stdin_panic.md  2026-07-06_abort_boot_loop.md  2026-07-06_tg1wdt_bootloop_s3_migration.md  2026-07-07_step4_boot_crash.md  2026-07-11_boot_invalid_segment_length.md  2026-07-11_ip_event_stack_overflow.md  2026-07-11_new_crash_after_ll038_fix.md  2026-07-18_motor_task_stack_overflow_homing.md  http_valve_stack_overflow.md  uart_stdin_panic.md
docs/esp_idf_v6/: ESP-IDF Tests with Pytest Guide - ESP32 - — ESP-IDF Programming Guide v6.0.2 documentation.mhtml  Unit Testing in ESP32 - ESP32 - — ESP-IDF Programming Guide v6.0.2 documentation.mhtml
docs/guides/: build.md  migration_rationale.md  testing.md
docs/lessons_learned/: LL-026.yaml  LL-036.yaml  LL-037.yaml  LL-038.yaml  LL-039.yaml  LL-040.yaml  LL-041.yaml  LL-042.yaml  LL-044.yaml  LL-045.yaml  LL-046.yaml  LL-050.yaml  LL-051.yaml  LL-053.yaml
docs/protocols/: embedded_boot_crash.md  heap_corruption.md  stack_overflow.md
docs/refs/: coding_style.md  diagnostic_spec.md  esp32-s3_datasheet_en.md  esp_idf_v6_migration_ref.md  memory_spec.md  project.md  wifi_spec.md
legacy/: .gitignore  AGENTS.md  PROJECT.md  opencode.json  partitions.csv  platformio.ini
legacy/data/: index.html
legacy/rust/: AGENTS.md  Cargo.toml  build.rs  clippy.toml  sdkconfig.defaults
legacy/scripts/: ble_integration_test.py  clang_check.bat  diagnose_readlog.py  find_port.py  send_after_ready.py  send_cmd.py  serial_monitor.py
legacy/src/: adc.cpp  adc.h  ble.cpp  ble.h  burette_cal.cpp  burette_cal.h  burette_planner.cpp  command.cpp  (+26 more)
main/: CMakeLists.txt  Kconfig.projbuild  gpio_config.cpp  gpio_config.hpp  log_capture.cpp  log_capture.hpp  main.cpp  net_owner.cpp  net_owner.hpp  version.cpp  version.h
patches/: 0001-fix-rmt-encoder-bitmask.patch
protocols/: embedded_boot_crash.md  heap_corruption.md  stack_overflow.md
scripts/: analyze_last_crash.sh  arch_config.toml  ble_serial_test.py  ble_test_quick.py  build.sh  check_arch.py  check_lint_suppressions.py  check_unsafe.py  check_unwrap.py  crash_analyzer.py  decode_backtrace.sh  find_port.py  flash.sh  idf.sh  lint.sh  monitor.py  monitor.sh  pipeline.py  pre_commit.sh  serial_monitor.py  setup-test-deps.sh
src/: config.rs  errors.rs  esp_mutex.rs  esp_safe.rs  lib.rs  limitswitch.rs  logger.rs  main.rs  pins.rs  status.rs  temperature.rs  types.rs  webserver.rs  wifi.rs
tests/: CMakeLists.txt
tests/src/: stub_motor_task.cpp  stub_nvs.cpp  stub_valve.cpp  test_adc.cpp  test_ble_init.cpp  test_broadcast.cpp  test_burette.cpp  test_cal_math.cpp  test_command.cpp  test_dispatch.cpp  test_dns.cpp  test_handlers.cpp  test_http_config.cpp  test_json_utils.cpp  test_logging.cpp  test_mdns.cpp  test_rest_api.cpp  test_scheduler.cpp  test_serial.cpp  test_state_machine.cpp  test_types.cpp  test_valve.cpp  test_wifi_sta.cpp
tests/stubs/: esp_err.h  esp_log.h  esp_timer.h  nvs_flash.h
tests/stubs/driver/: gpio.h  uart.h
tests/stubs/freertos/: FreeRTOS.h  queue.h  task.h
tests/stubs/hal/: wdt_hal.h
tests/stubs/soc/: rtc.h
(+250 files in other folders)
