[package]
name = "ecotiter-fw"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "ecotiter_fw"
path = "src/lib.rs"

[[bin]]
name = "ecotiter"
path = "src/main.rs"

[dependencies]
log = "0.4"
embedded-svc = "0.29"
embedded-io = "0.6"
heapless = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", features = ["binstart"] }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
esp32-nimble = { path = "C:/Users/vlbes/esp32-nimble" }

[build-dependencies]
embuild = { git = "https://github.com/ivmarkov/embuild", branch = "master" }

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", features = ["binstart"] }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
embuild = { git = "https://github.com/ivmarkov/embuild", branch = "master" }

[package.metadata.esp-idf-sys]
extra_components = [
    { remote_component = { name = "espressif/mdns", version = "1.2" } }
]
