[package]
name = "ecotiter-fw"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "ESP32 + Rust + ESP-IDF v6 experimental firmware reference (WiFi/BLE/stepper/ADC/DS18B20)"
license = "MIT"
repository = "https://github.com/vlbes/esp32-rs-on-idf6"
readme = "README.md"
keywords = ["embedded", "esp32", "esp-idf", "rust", "reference"]
categories = ["embedded", "hardware-support", "science"]

[lib]
name = "ecotiter_fw"
path = "src/lib.rs"

[[bin]]
name = "ecotiter"
path = "src/main.rs"

[dependencies]
log = "0.4"
embedded-svc = "0.29"
embedded-io = "0.6"
heapless = { version = "0.9", features = ["serde"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", features = ["binstart"] }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
esp32-nimble = { git = "https://github.com/taks/esp32-nimble" }

[dev-dependencies]
proptest = "1"

[build-dependencies]
embuild = { git = "https://github.com/ivmarkov/embuild", branch = "master" }

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
embuild = { git = "https://github.com/ivmarkov/embuild", branch = "master" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
undocumented_unsafe_blocks = "deny"

[features]
strict-lints = []

[package.metadata.esp-idf-sys]
extra_components = [
    { remote_component = { name = "espressif/mdns", version = "1.2" } }
]
