idf_component_register(
    SRCS
        "src/drivers/stepper.cpp"
        "src/drivers/limitswitch.cpp"
        "src/drivers/led.cpp"
        "src/drivers/valve.cpp"
        "src/drivers/adc.cpp"
        "src/drivers/onewire.cpp"
        "src/storage/nvs.cpp"
        "src/motor_task.cpp"
        "src/temp_thread.cpp"
    INCLUDE_DIRS "include"
    REQUIRES
        domain
        diag
        esp_driver_gpio
        esp_driver_rmt
        esp_adc
        nvs_flash
        esp_timer
        esp_common
        freertos
)
