idf_component_register(
    SRCS
        "src/drivers/stepper.cpp"
        "src/drivers/tmc_uart.cpp"
        "src/drivers/limitswitch.cpp"
        "src/drivers/rgb_led.cpp"
        "src/drivers/valve.cpp"
        "src/drivers/adc.cpp"
        "src/drivers/onewire.cpp"
        "src/storage/nvs.cpp"
        "src/motor/task.cpp"
        "src/motor/motion.cpp"
        "src/motor/sm_runners.cpp"
        "src/motor/homing.cpp"
        "src/temp_thread.cpp"
        "network/src/ble.cpp"
        "network/src/ble_notify_thread.cpp"
        "network/src/wifi.cpp"
        "network/src/http_server.cpp"
    INCLUDE_DIRS
        "include"
        "network/include"
    PRIV_INCLUDE_DIRS
        "src/motor"
    REQUIRES
        domain
        diag
        interface
        esp_driver_gpio
        esp_driver_rmt
        esp_driver_uart
        esp_adc
        nvs_flash
        esp_timer
        esp_common
        freertos
        bt
        esp_coex
        esp_wifi
        esp_http_server
        lwip
        esp_event
        esp_netif
        espressif__mdns
)
